@@ -58,9 +58,8 @@
 	  (define-key m (kbd "C-a") "time")
 	  (define-key m (kbd "'") "select")
 	  (define-key m (kbd "\"") "windowlist")
-	  (define-key m (kbd "C-t") "other")
+	  (define-key m (kbd "C-t") "other-in-frame")
 	  (define-key m (kbd "M-t") "pull-hidden-other")
-	  (define-key m (kbd "C-M-t") "other-in-frame")
 	  (define-key m (kbd "!") "exec")
 	  (define-key m (kbd "C-g") "abort")
 	  (define-key m (kbd "0") "pull 0")
@@ -93,9 +92,9 @@
 	  (define-key m (kbd "Left") "move-focus left")
 	  (define-key m (kbd "Right") "move-focus right")
 	  (define-key m (kbd "v") "version")
-	  (define-key m (kbd "M") "lastmsg")
-	  (define-key m (kbd "m") "mark")
-	  (define-key m (kbd "C-m") "mark")
+	  (define-key m (kbd "#") "mark")
+	  (define-key m (kbd "m") "lastmsg")
+	  (define-key m (kbd "C-m") "lastmsg")
 	  (define-key m (kbd "G") "vgroups")
 	  (define-key m (kbd "g") '*groups-map*)
 	  (define-key m (kbd "F1") "gselect 1")
